# libquantify

./: CMakeLists.txt  LICENSE  README.md  libquantify.pc.in
include/quantify/: dimensions.h  incompatibleunitsexception.h  quantity.h  standardunits.h  unit.h  unitunsupportedoperationexception.h  utils.h
src/: CMakeLists.txt  dimensions.cpp  quantity.cpp  standardunits.cpp  unit.cpp
test/: CMakeLists.txt  dimensionstests.cpp  quantitytests.cpp  unittests.cpp  utilstests.cpp
